# tair

./: ChangeLog  Makefile.am  bootstrap.sh  configure.ac  tcmalloc.m4
rpm/: scm.xml  t-csrd-tairFastDump-build.sh  t-csrd-tairFastDump.spec  tair-build.sh
scripts/: tair.sh
share/: configserver.conf  dataserver.conf  dataserver.conf.default  group.conf  invalserver.conf.default
src/client/: DiamondClient.h  Makefile.am  cluster_controller.cpp  cluster_controller.hpp  cluster_handler_manager.cpp  cluster_handler_manager.hpp  cluster_info_updater.cpp  cluster_info_updater.hpp  i_tair_client_impl.cpp  i_tair_client_impl.hpp  local_cache.h  simpletest.cpp  tair_client.cpp  tair_client.hpp  tair_client_api.cpp  tair_client_api.hpp  tair_client_api_impl.cpp  tair_client_api_impl.hpp  tair_client_capi.cpp  tair_client_capi.hpp  tair_mc_client_api.cpp  tair_mc_client_api.hpp  tair_multi_cluster_client_api.cpp  tair_multi_cluster_client_api.hpp  tair_multi_cluster_client_impl.cpp  tair_multi_cluster_client_impl.hpp
src/common/: BlockQueueEx.hpp  Makefile.am  data_dumpper.cpp  data_dumpper.hpp  data_entry.hpp  define.hpp  directory_op.cpp  directory_op.hpp  dump_data_info.hpp  file_op.cpp  inval_stat.hpp  item_data_info.hpp  log.hpp  mmap_file.hpp  record_logger.hpp  record_logger_util.cpp  record_logger_util.hpp  stat_helper.cpp  stat_helper.hpp  stat_info.hpp  util.cpp  util.hpp  wait_object.hpp
src/configserver/: Makefile.am  conf_server_table_manager.cpp  conf_server_table_manager.hpp  conf_server_table_monitor.cpp  conf_server_table_transfer.cpp  const_parameter_pinter.cpp  group_info.cpp  group_info.hpp  server_conf_thread.cpp  server_conf_thread.hpp  server_info.cpp  server_info.hpp  server_info_allocator.cpp  server_info_allocator.hpp  server_info_file_mapper.cpp  server_info_file_mapper.hpp  server_info_file_monitor.cpp  stat_info.cpp  stat_info.hpp  stat_info_test.cpp  table_builder.cpp  table_builder.hpp  table_builder1.cpp  table_builder1.hpp  table_builder2.cpp  table_builder2.hpp  tair_cfg_svr.cpp  tair_cfg_svr.hpp
src/dataserver/: Makefile.am  base_migrate.hpp  base_tair_manager.hpp  dup_sync_manager.cpp  dup_sync_manager.hpp  duplicate_base.hpp  duplicate_manager.cpp  duplicate_manager.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  item_manager.cpp  item_manager.hpp  migrate_manager.cpp  migrate_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  repair_rsync.cpp  request_processor.cpp  request_processor.hpp  table_manager.cpp  table_manager.hpp  tair_manager.cpp  tair_manager.hpp  tair_server.cpp  tair_server.hpp  update_log.cpp  update_log.hpp
src/invalserver/: Makefile.am  inval_async_task_thread.cpp  inval_group.cpp  inval_group.hpp  inval_loader.cpp  inval_loader.hpp  inval_loader_test.cpp  inval_loader_test.hpp  inval_loader_test_main.cpp  inval_periodic_worker.cpp  inval_periodic_worker.hpp  inval_processor.cpp  inval_processor.hpp  inval_request_packet_wrapper.hpp  inval_request_storage.cpp  (+7 more)
src/storage/ldb/: Makefile.am  bg_task.cpp  bg_task.hpp  ldb_balancer.cpp  ldb_balancer.hpp  ldb_bucket.cpp  ldb_bucket.hpp  ldb_cache_stat.cpp  ldb_cache_stat.hpp  ldb_comparator.cpp  ldb_comparator.hpp  ldb_define.cpp  ldb_define.hpp  ldb_gc_factory.cpp  ldb_gc_factory.hpp  ldb_instance.cpp  ldb_instance.hpp  ldb_manager.cpp  ldb_manager.hpp  ldb_remote_sync_logger.cpp  ldb_remote_sync_logger.hpp  ldb_rsync.cpp  stat_manager.cpp  stat_manager.hpp  view_cache_stat.cpp
src/storage/ldb/leveldb/: Makefile.am  ax_port_leveldb.m4
src/storage/ldb/leveldb/db/: c.cc  db_impl.cc  db_impl.h  db_iter.cc  dbformat.cc  dbformat.h  filename.cc  filename.h  log_reader.cc  memtable.cc  memtable.h  table_cache.cc  table_cache.h  version_set.cc  version_set.h  write_batch.cc
src/storage/ldb/leveldb/include/leveldb/: c.h  cache.h  comparator.h  db.h  env.h  iterator.h  options.h  write_batch.h
src/storage/ldb/leveldb/port/: port_posix.h
src/storage/ldb/leveldb/table/: format.cc  table.cc
src/storage/ldb/leveldb/util/: cache.cc  coding.h  config.cc  config.h  env_posix.cc  options.cc  posix_logger.h
src/storage/ldb/snappy/: config.h.in
src/storage/ldb/tools/: Makefile.am  ldb_manifest_merger.cpp  ldb_rsync.cpp  ldb_sst_picker.cpp  ldb_util.cpp  ldb_util.hpp
test/: Makefile.am
(+103 files in other folders)
